...
            .fillMaxWidth(),
        verticalArrangement = Arrangement.spacedBy(16.dp)
    ) {
        KarikaTextField1(
            modifier = Modifier
                .fillMaxWidth(),
            title = "Napomena za dobavljača",
            value = component.vendorNote.asState(),
            placeholder = "Napomena za dobavljaca (opcionalno)",
            imeAction = ImeAction.Done
        )
        KarikaText(
            modifier = Modifier,
...
    ) {
        KarikaText(
            modifier = Modifier
                .weight(1f)
                .padding(start = 16.dp),
            color = KarikaColors.Black,
            text = "Informacije za dostavu:",
            fontWeight = FontWeight.W700,
            textSize = 20.sp
        )
        KarikaText(
            modifier = Modifier
                .onClick {
...
