...
            ).collect { result ->
                when (result) {
                    is ResultState.Loading -> showLoader()
                    is ResultState.Success -> {
                        hideLoader()
                        if (showSnack) {
                            showMessage("Proizvod dodan u korpu!")
                        }
                        reloadCart()
                    }

                    is ResultState.Error -> {
                        hideLoader()
...
            cartRepository.removeFromCart(product.itemId?.toString() ?: return@launch)
                .collect { result ->
                    when (result) {
                        is ResultState.Loading -> showLoader()
                        is ResultState.Success -> {
                            hideLoader()
                            showMessage("Proizvod uklonjen iz korpe!")
                            reloadCart()
                        }

                        is ResultState.Error -> {
                            hideLoader()
                            showMessage(result.message ?: "")
...
